# fast-conv

./: .gitignore  CMakeLists.txt  Makefile  README.md  automata.cpp  automata.hpp  bench.cpp  plot.py  regression.cpp
src/: automata.cpp  bench.cpp  main.cpp  regression.cpp
